# arion_agent

./: .gitignore  README.md  pyproject.toml
arion_agent/: __init__.py  assembly.py  context.py  graph.py  session.py
arion_agent/checkpoint/: __init__.py  proxy.py
arion_agent/environments/: __init__.py
arion_agent/environments/_sandbox/: __init__.py  config.py  confinement.py  paths.py
arion_agent/environments/browser/: config.py  (+6 more)
arion_agent/identity/: __init__.py  config.py  middleware.py  templates.py
arion_agent/middleware/: __init__.py  base.py  patch_tool_calls.py  stats.py  wrapper.py
arion_agent/providers/: __init__.py  deepseek.py  moonshot.py  resolver.py
arion_agent/routing/: __init__.py  config.py  middleware.py
arion_agent/semantic_search/: __init__.py  chunker.py  config.py  embedder.py  ignore.py  incremental.py  indexer.py  retriever.py  scope.py  service.py  store.py  translate.py  watcher.py
arion_agent/serve/: __init__.py  __main__.py  handlers.py
arion_agent/skills/: __init__.py  config.py  middleware.py  prompts.py
arion_agent/subagenting/: __init__.py  config.py  managed.py  middleware.py  prompts.py  templates.py
arion_agent/summarization/: __init__.py  compress.py  config.py  policies.py  prompts.py  sections.py
arion_agent/tool_manager/: __init__.py  executor.py
arion_agent/util/: __init__.py  abort.py  checkpoint_cleanup.py  checkpoint_history.py  io_backend.py  multimodal.py  persistence.py  remote_io.py  runtime.py  stats.py  streaming.py  timezone.py  tokens.py
scripts/: ensure_tmux.sh  make_source_snapshot.py  verify_sync_smoke.py
tests/: conftest.py  test_agentic_core.py  test_browser.py  test_browser_download.py  test_browser_lifecycle.py  test_browser_tabs.py  test_combined_env.py  test_compression.py  test_docker_sqlite.py  test_env_cross_provider.py  test_error_handling.py  test_extensibility.py  test_file_ops.py  test_heartbeat.py  test_hot_switch.py  test_identity.py  test_image_cross_provider.py  test_image_read.py  test_interrupt.py  test_jobs.py  test_multi_agent_subagent.py  test_providers.py  test_sandbox_mounts.py  test_search_environment.py  test_search_ignore.py  test_search_indexer_lifecycle.py  test_search_reset.py  test_search_scope.py  test_self_heal.py  test_shared_workspace.py  test_shell_ops.py  test_signal.py  test_skills.py  test_smoke.py  test_subagenting.py  test_summarization_defaults.py  test_summarization_prompts.py  test_summarization_sections.py  test_thinking_defaults.py  test_token_cost.py  (+4 more)
(+32 files in other folders)
